tests/snapshots/blackbox_tui_test__empty_submission_prevented.snap
---
source: tests/blackbox_tui_test.rs
expression: terminal.backend()
---
"                                                                                                    "
"›  Write a message...                                                                               "
"                                                                                                    "
"Agent: No agent selected                                                                            "
"                                                                                                    "
"/switch-model: agents | /exit: quit                                                                 "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
