tests/snapshots/blackbox_tui_test__initial_state.snap
---
source: tests/blackbox_tui_test.rs
expression: terminal.backend()
---
"                                                                                                    "
"›  Write a message...                                                                               "
"                                                                                                    "
"Agent: Claude Code ACP                                                                              "
"                                                                                                    "
"/model: agents | /exit: quit                                                                        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
