tests/snapshots/blackbox_tui_test__multiline_input.snap
---
source: tests/blackbox_tui_test.rs
expression: terminal.backend()
---
"                                                                                                    "
"   Line 1                                                                                           "
"›  Line 2                                                                                           "
"                                                                                                    "
"Agent: Claude Code ACP                                                                              "
"                                                                                                    "
"/switch-model: agents | /exit: quit                                                                 "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
