tests/snapshots/blackbox_tui_test__shimmer_during_streaming.snap
---
source: tests/blackbox_tui_test.rs
expression: terminal.backend()
---
"                                                                                                    "
"›  Write a message...                                                                               "
"                                                                                                    "
"Agent: Claude Code ACP                                                                              "
"Claude Code ACP processing...                                                                       "
"/model: agents | /exit: quit                                                                        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
