tests/snapshots/blackbox_tui_test__typed_hi.snap
---
source: tests/blackbox_tui_test.rs
expression: terminal.backend()
---
"                                                                                                    "
"›  hi                                                                                               "
"                                                                                                    "
"Agent: Claude Code ACP                                                                              "
"                                                                                                    "
"/model: agents | /exit: quit                                                                         "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
