tests/snapshots/blackbox_tui_test__unicode_input.snap
---
source: tests/blackbox_tui_test.rs
expression: terminal.backend()
---
"                                                                                                    "
"›  Hello 世界 👋                                                                                    " Hidden by multi-width symbols: [(10, " "), (12, " "), (15, " ")]
"                                                                                                    "
"Agent: Claude Code ACP                                                                              "
"                                                                                                    "
"/switch-model: agents | /exit: quit                                                                 "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
